--- a/Libraries/LibCrypto/CMakeLists.txt
+++ b/Libraries/LibCrypto/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCES
     Hash/PBKDF2.cpp
     Hash/SHA1.cpp
     Hash/SHA2.cpp
+    Hash/SHA3.cpp
     PK/RSA.cpp
     PK/EC.cpp
     SecureRandom.cpp
