--- a/Libraries/LibRequests/CMakeLists.txt
+++ b/Libraries/LibRequests/CMakeLists.txt
@@ -12,4 +12,4 @@ set(GENERATED_SOURCES
 )
 
 ladybird_lib(LibRequests requests)
-target_link_libraries(LibRequests PRIVATE LibCore LibIPC)
+target_link_libraries(LibRequests PRIVATE LibCore LibHTTP LibIPC)
