LibWeb/HTML: Extract ErrorInformation struct into its own files
This is used from a few different places in the spec.

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -472,6 +472,7 @@ set(SOURCES
     HTML/ElementInternals.cpp
     HTML/EmbedderPolicy.cpp
     HTML/ErrorEvent.cpp
+    HTML/ErrorInformation.cpp
     HTML/EventHandler.cpp
     HTML/EventLoop/EventLoop.cpp
     HTML/EventLoop/Task.cpp
