AK+LibGfx: Add a VULKAN_DEBUG option that enables validations layers
This allows to easily toggle Vulkan validation layers which can be
really helpful while debugging Vulkan code.

--- a/AK/Debug.h.in
+++ b/AK/Debug.h.in
@@ -290,6 +290,10 @@
 #    cmakedefine01 VPX_DEBUG
 #endif
 
+#ifndef VULKAN_DEBUG
+#    cmakedefine01 VULKAN_DEBUG
+#endif
+
 #ifndef WASI_DEBUG
 #    cmakedefine01 WASI_DEBUG
 #endif
