LibWeb+WebContent: Rename the http-cache flag to http-memory-cache
Rather than having http-cache and http-disk-cache, let's rename the
former to http-memory-cache to be extra clear what we are talking about.

--- a/AK/Debug.h.in
+++ b/AK/Debug.h.in
@@ -106,8 +106,8 @@
 #    cmakedefine01 HTML_SCRIPT_DEBUG
 #endif
 
-#ifndef HTTP_CACHE_DEBUG
-#    cmakedefine01 HTTP_CACHE_DEBUG
+#ifndef HTTP_MEMORY_CACHE_DEBUG
+#    cmakedefine01 HTTP_MEMORY_CACHE_DEBUG
 #endif
 
 #ifndef HTTPJOB_DEBUG
