LibHTTP: Place HTTP disk cache log points behind a debug flag
These log points are quite verbose. Before we enable the disk cache by
default, let's place them behind a debug flag.

--- a/AK/Debug.h.in
+++ b/AK/Debug.h.in
@@ -106,6 +106,10 @@
 #    cmakedefine01 HTML_SCRIPT_DEBUG
 #endif
 
+#ifndef HTTP_DISK_CACHE_DEBUG
+#    cmakedefine01 HTTP_DISK_CACHE_DEBUG
+#endif
+
 #ifndef HTTP_MEMORY_CACHE_DEBUG
 #    cmakedefine01 HTTP_MEMORY_CACHE_DEBUG
 #endif
