LibWeb: Implement the Badging API
Add support for the Badging API (https://w3c.github.io/badging/),
which allows web applications to set application badges.
This fixes the WPT test badging/non-fully-active.https.html.

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -592,6 +592,7 @@ set(SOURCES
     HTML/NavigationParams.cpp
     HTML/NavigationTransition.cpp
     HTML/Navigator.cpp
+    HTML/NavigatorBadge.cpp
     HTML/NavigatorBeacon.cpp
     HTML/NavigatorConcurrentHardware.cpp
     HTML/NavigatorDeviceMemory.cpp
