--- a/Meta/gn/secondary/Userland/Libraries/LibMedia/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibMedia/BUILD.gn
@@ -31,6 +31,7 @@ shared_library("LibMedia") {
     sources += [
       "Audio/FFmpegLoader.cpp",
       "FFmpeg/FFmpegAudioDecoder.cpp",
+      "FFmpeg/FFmpegHelpers.cpp",
       "FFmpeg/FFmpegVideoDecoder.cpp",
     ]
   } else {
