--- a/Meta/gn/secondary/Userland/Libraries/LibMedia/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibMedia/BUILD.gn
@@ -39,7 +39,10 @@ shared_library("LibMedia") {
   }
   if (current_os == "mac") {
     sources += [ "Audio/PlaybackStreamAudioUnit.cpp" ]
-    frameworks = [ "AudioUnit.framework" ]
+    frameworks = [
+      "AudioToolbox.framework",
+      "AudioUnit.framework",
+    ]
   }
   deps = [
     "//AK",
