--- a/Meta/gn/secondary/Userland/Libraries/LibMedia/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibMedia/BUILD.gn
@@ -30,6 +30,7 @@ shared_library("LibMedia") {
   if (enable_ffmpeg) {
     sources += [
       "Audio/FFmpegLoader.cpp",
+      "FFmpeg/FFmpegAudioConverter.cpp",
       "FFmpeg/FFmpegAudioDecoder.cpp",
       "FFmpeg/FFmpegHelpers.cpp",
       "FFmpeg/FFmpegVideoDecoder.cpp",
