--- a/Libraries/LibMedia/CMakeLists.txt
+++ b/Libraries/LibMedia/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES
     Color/TransferCharacteristics.cpp
     Containers/Matroska/MatroskaDemuxer.cpp
     Containers/Matroska/Reader.cpp
+    IncrementallyPopulatedStream.cpp
     PlaybackManager.cpp
     PlaybackStates/PlaybackStateHandler.cpp
     Providers/AudioDataProvider.cpp
