--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -747,6 +747,7 @@ set(SOURCES
     Layout/ReplacedBox.cpp
     Layout/MathMLBox.cpp
     Layout/MathMLFractionBox.cpp
+    Layout/MathMLRadicalBox.cpp
     Layout/SVGBox.cpp
     Layout/SVGClipBox.cpp
     Layout/SVGForeignObjectBox.cpp
@@ -818,6 +819,7 @@ set(SOURCES
     Painting/LabelablePaintable.cpp
     Painting/MarkerPaintable.cpp
     Painting/MathMLFractionPaintable.cpp
+    Painting/MathMLRadicalPaintable.cpp
     Painting/MediaPaintable.cpp
     Painting/NavigableContainerViewportPaintable.cpp
     Painting/Paintable.cpp
