--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,13 @@ jobs:
             clang_plugins: false
             runner_labels: '["blacksmith-16vcpu-ubuntu-2404"]'
 
+          - os_name: 'Windows'
+            arch: 'x86_64'
+            build_preset: 'Windows_Sanitizer_CI'
+            toolchain: 'ClangCL'
+            clang_plugins: false
+            runner_labels: '["blacksmith-16vcpu-windows-2025"]'
+
     secrets: inherit
     uses: ./.github/workflows/lagom-template.yml
     with:
