--- a/.github/workflows/nightly-lagom.yml
+++ b/.github/workflows/nightly-lagom.yml
@@ -66,7 +66,7 @@ jobs:
             build_preset: 'Windows_Sanitizer_CI'
             toolchain: 'ClangCL'
             clang_plugins: false
-            runner_labels: '["windows-2025"]'
+            runner_labels: '["blacksmith-8vcpu-windows-2025"]'
 
     secrets: inherit
     uses: ./.github/workflows/lagom-template.yml
