Tests: Skip file input tests that frequently time out on CI

--- a/Tests/LibWeb/TestConfig.ini
+++ b/Tests/LibWeb/TestConfig.ini
@@ -354,3 +354,8 @@ Text/input/selection-over-multiple-code-units.html
 
 ; Flaky: https://github.com/LadybirdBrowser/ladybird/issues/6846
 Text/input/wpt-import/html/semantics/embedded-content/the-img-element/naturalWidth-naturalHeight-width-height.tentative.html
+
+; File tests that frequently time out on CI
+; https://github.com/LadybirdBrowser/ladybird/issues/7179
+Text/input/HTML/StructuredClone-serializable-FileList.html
+Text/input/input-file-accept.html
