--- a/.github/workflows/nightly-lagom.yml
+++ b/.github/workflows/nightly-lagom.yml
@@ -82,16 +82,15 @@ jobs:
     if: github.repository == 'LadybirdBrowser/ladybird'
     name: Flatpak ${{ matrix.arch }}
 
-    # FIXME: Temporarily run on GitHub runners until Blacksmith runners have overlay redirect_dir enabled.
     strategy:
       fail-fast: false
       matrix:
         arch: [ 'x86_64' ]
-        runner_labels: [ '["ubuntu-24.04"]' ]
+        runner_labels: [ '["blacksmith-8vcpu-ubuntu-2404"]' ]
 
         include:
           - arch: 'aarch64'
-            runner_labels: '["ubuntu-24.04-arm"]'
+            runner_labels: '["blacksmith-8vcpu-ubuntu-2404-arm"]'
 
     secrets: inherit
     uses: ./.github/workflows/flatpak-template.yml
