LibHTTP+LibWeb: Store the in-memory HTTP cache without JS realms
The in-memory HTTP Fetch cache currently keeps the realm which created
each cache entry alive indefinitely. This patch migrates this cache to
LibHTTP, to ensure it is completely unaware of any JS objects.

Now that we are not interacting with Fetch response objects, we can no
longer use Streams infrastructure to pipe the response body into the
Fetch response. Fetch also ultimately creates the cache response once
the HTTP response headers have arrived. So the LibHTTP cache will hold
entries in a pending list until we have received the entire response
body. Then it is moved to a completed list and may be used thereafter.

--- a/Libraries/LibHTTP/CMakeLists.txt
+++ b/Libraries/LibHTTP/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
     Cache/CacheEntry.cpp
     Cache/CacheIndex.cpp
     Cache/DiskCache.cpp
+    Cache/MemoryCache.cpp
     Cache/Utilities.cpp
     Header.cpp
     HeaderList.cpp
