Add workflow_dispatch to nightly-android.yml

--- a/.github/workflows/nightly-android.yml
+++ b/.github/workflows/nightly-android.yml
@@ -5,6 +5,8 @@ on:
   schedule:
     - cron: '0 0 * * *'
 
+  workflow_dispatch: 
+
 env:
   # runner.workspace = /home/runner/work/ladybird
   # github.workspace = /home/runner/work/ladybird/ladybird
