Update nightly workflow triggers and schedule

--- a/.github/workflows/nightly-android.yml
+++ b/.github/workflows/nightly-android.yml
@@ -1,11 +1,11 @@
 name: Nightly Android
 
 on:
-  # Automatically run at the end of every day.
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
-
-  workflow_dispatch: 
+  push:
+    branches: [ main ]
 
 env:
   # runner.workspace = /home/runner/work/ladybird
