LibWeb+LibMedia: Decoding for webaudio
Support webaudio's BaseAudioContext.decodeAudioData via ffmpeg. Use a
background thread until that glorious day arrives when all media is
decoded outside of WebContent.

--- a/Libraries/LibMedia/CMakeLists.txt
+++ b/Libraries/LibMedia/CMakeLists.txt
@@ -3,6 +3,7 @@ include(audio)
 include(ffmpeg)
 
 set(SOURCES
+    Audio/AudioDecoding.cpp
     Containers/Matroska/MatroskaDemuxer.cpp
     Containers/Matroska/Reader.cpp
     IncrementallyPopulatedStream.cpp
