LibCompress: Enable unity build

--- a/Libraries/LibCompress/CMakeLists.txt
+++ b/Libraries/LibCompress/CMakeLists.txt
@@ -9,5 +9,7 @@ set(SOURCES
 ladybird_lib(LibCompress compress)
 target_link_libraries(LibCompress PRIVATE LibCore LibCrypto)
 
+set_target_properties(LibCompress PROPERTIES UNITY_BUILD ${LADYBIRD_ENABLE_UNITY_BUILD})
+
 find_package(ZLIB REQUIRED)
 target_link_libraries(LibCompress PRIVATE ZLIB::ZLIB)
